2000-12-11  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* sh-tdep.c (sh_extract_struct_value_address): Protoize.

2000-12-11  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* blockframe.c (get_prev_frame): Add missing paren omitted in 
	last check-in.

2000-12-11  Fernando Nasser  <fnasser@redhat.com>

        * Makefile.in (SUBDIR_GDBTK_OBS, SUBDIR_GDBTK_SRCS,
	SUBDIR_GDBTK_DEPS, SUBDIR_GDBTK_INITS, SUBDIR_GDBTK_LDFLAGS,
	SUBDIR_GDBTK_CFLAGS): New macros.  For gdbtk subdir.
	* configure.in: Fix typo.  It is CONFIG_OBS not CONFIG_OJS.
	Use the SUBDIR_GDBTK_* macros instead of hard coded file names.
	* configure: Regenerate.

2000-12-11  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* blockframe.c (get_prev_frame): Zero all fields of prev by
	default using memset (instead of one at a time).

2000-12-11  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* sh-tdep.c (sh_extract_struct_value_address): For consistancy,
	change decl from "CORE_ADDR static" to "static CORE_ADDR".

2000-12-11  Fernando Nasser  <fnasser@redhat.com>

	* configure.in: Fix typos.  It is CONFIG_SRCS not CONFIG_SRS.
	* configure: Regenerate.

2000-12-11  Fernando Nasser  <fnasser@redhat.com>

	* configure.in: Fix a couple of typos in the handling of the
	enable_gdbcli option.  Make it check enableval for the result
	of AC_ARG_ENABLE.
	* configure: Regenerate.

2000-12-08  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* dwarf2read.c (DWARF2_REG_TO_REGNUM): New macro.  Provide default
	definition.  Will be used to translate between the compiler's
	register numbering and GDB's (for register variables etc).
	(new_symbol): Use DWARF2_REG_TO_REGNUM to translate register ids.
	* alpha-tdep.c: Fix typo in comment.
	* dbxread.c: Fix typo in comment.
	* fr30-tdep.c: Fix typo: newline missing after comment.
	* mcore-tdep.c: Fix typo in comment.	

2000-12-07  J.T. Conklin  <jtc@redback.com>

	* gdbserver/low-hppabsd.c (buf2, environ, quit, quit_flag):
 	Removed unused variables and declarations.